Fixed layout on modals on mobile.

--- a/src/components/Modal/index.module.scss
+++ b/src/components/Modal/index.module.scss
@@ -1,8 +1,9 @@
 @import '~assets/styles/_typography.scss';
 @import '~assets/styles/_colors.scss';
+@import '~assets/styles/_mediaQueries.scss';
 
 .container {
-  padding: 16px 24px
+  padding: 16px 24px;
 }
 
 .header {
@@ -13,6 +14,13 @@
 }
 
 .buttons {
-  text-align: right;
-  margin-top: 20px;
+  text-align: center;
+  margin: 10px 0 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  @include media-breakpoint-up(sm) {
+    display: block;
+    flex-direction: unset;
+  }
 }
