--- a/src/pages/Terminal/View/index.module.scss
+++ b/src/pages/Terminal/View/index.module.scss
@@ -17,3 +17,8 @@
 .noOrders {
   text-align: center;
 }
+
+.speedDialContainer {
+  position: sticky;
+  bottom: 0;
+}
